--- a/form.yml
+++ b/form.yml
@@ -1,11 +1,6 @@
 ---
 cluster:
-  - "owens"
-  - "pitzer"
-  - "ascend"
-  - "kubernetes"
-  - "kubernetes-test"
-  - "kubernetes-dev"
+  - "bruno"
 form:
   - version
   - auto_accounts
@@ -46,255 +41,3 @@ attributes:
         with 48 cores and 1.5 TB of RAM. Pitzer has 4 with 3 TB of RAM and 80 cores.
         Pitzer also has 12 Largmem nodes have 48 cores with 768 GB of RAM.
 
-      [NVIDIA Tesla P100 GPU]: http://www.nvidia.com/object/tesla-p100.html
-      [NVIDIA Tesla V100 GPUs]: https://www.nvidia.com/en-us/data-center/v100/
-    options:
-      - [
-          "any",     "any",
-          data-min-num-cores-for-cluster-owens: 1,
-          data-max-num-cores-for-cluster-owens: 28,
-          data-min-num-cores-for-cluster-pitzer: 1,
-          data-max-num-cores-for-cluster-pitzer: 48,
-          data-min-num-cores-for-cluster-ascend: 1,
-          data-max-num-cores-for-cluster-ascend: 84,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "40 core",     "any-40core",
-          data-min-num-cores-for-cluster-pitzer: 1,
-          data-max-num-cores-for-cluster-pitzer: 40,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "48 core",     "any-48core",
-          data-min-num-cores-for-cluster-pitzer: 1,
-          data-max-num-cores-for-cluster-pitzer: 48,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "any gpu",     "gpu",
-          data-min-num-cores-for-cluster-owens: 1,
-          data-max-num-cores-for-cluster-owens: 28,
-          data-min-num-cores-for-cluster-pitzer: 1,
-          data-max-num-cores-for-cluster-pitzer: 48,
-          data-min-num-cores-for-cluster-ascend: 1,
-          data-max-num-cores-for-cluster-ascend: 88,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "40 core gpu",     "gpu-40core",
-          data-min-num-cores-for-cluster-pitzer: 1,
-          data-max-num-cores-for-cluster-pitzer: 40,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "48 core gpu",     "gpu-48core",
-          data-min-num-cores-for-cluster-pitzer: 1,
-          data-max-num-cores-for-cluster-pitzer: 48,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "hugemem", "hugemem",
-          data-min-num-cores-for-cluster-owens: 4,
-          data-max-num-cores-for-cluster-owens: 48,
-          data-min-num-cores-for-cluster-pitzer: 20,
-          data-max-num-cores-for-cluster-pitzer: 80,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "largemem", "largemem",
-          data-min-num-cores-for-cluster-pitzer: 24,
-          data-max-num-cores-for-cluster-pitzer: 48,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-pitzer: true,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "debug",   "debug",
-          data-min-num-cores-for-cluster-owens: 1,
-          data-max-num-cores-for-cluster-owens: 28,
-          data-min-num-cores-for-cluster-pitzer: 1,
-          data-max-num-cores-for-cluster-pitzer: 48,
-          data-option-for-cluster-owens: true,
-          data-option-for-cluster-pitzer: true,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "pitzer",   "pitzer",
-          data-min-num-cores-for-cluster-kubernetes: 1,
-          data-max-num-cores-for-cluster-kubernetes: 10,
-          data-min-num-cores-for-cluster-kubernetes-test: 1,
-          data-max-num-cores-for-cluster-kubernetes-test: 10,
-          data-min-num-cores-for-cluster-kubernetes-dev: 1,
-          data-max-num-cores-for-cluster-kubernetes-dev: 6,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-pitzer: false,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-kubernetes: true,
-          data-option-for-cluster-kubernetes-test: true,
-          data-option-for-cluster-kubernetes-dev: true
-        ]
-      - [
-          "owens",   "owens",
-          data-min-num-cores-for-cluster-kubernetes: 1,
-          data-max-num-cores-for-cluster-kubernetes: 10,
-          data-min-num-cores-for-cluster-kubernetes-test: 1,
-          data-max-num-cores-for-cluster-kubernetes-test: 10,
-          data-min-num-cores-for-cluster-kubernetes-dev: 1,
-          data-max-num-cores-for-cluster-kubernetes-dev: 6,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-pitzer: false,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-kubernetes: true,
-          data-option-for-cluster-kubernetes-test: true,
-          data-option-for-cluster-kubernetes-dev: true
-        ]
-      - [
-          "pitzer gpu",   "pitzer-gpu",
-          data-min-num-cores-for-cluster-kubernetes: 1,
-          data-max-num-cores-for-cluster-kubernetes: 10,
-          data-min-num-cores-for-cluster-kubernetes-test: 1,
-          data-max-num-cores-for-cluster-kubernetes-test: 10,
-          data-min-num-cores-for-cluster-kubernetes-dev: 1,
-          data-max-num-cores-for-cluster-kubernetes-dev: 6,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-pitzer: false,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-kubernetes: true,
-          data-option-for-cluster-kubernetes-test: true,
-          data-option-for-cluster-kubernetes-dev: true
-        ]
-      - [
-          "owens gpu",   "owens-gpu",
-          data-min-num-cores-for-cluster-kubernetes: 1,
-          data-max-num-cores-for-cluster-kubernetes: 10,
-          data-min-num-cores-for-cluster-kubernetes-test: 1,
-          data-max-num-cores-for-cluster-kubernetes-test: 10,
-          data-min-num-cores-for-cluster-kubernetes-dev: 1,
-          data-max-num-cores-for-cluster-kubernetes-dev: 6,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-pitzer: false,
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-kubernetes: true,
-          data-option-for-cluster-kubernetes-test: true,
-          data-option-for-cluster-kubernetes-dev: true
-        ]
-  version:
-    widget: select
-    label: "R version"
-    help: "This defines the version of R you want to load."
-    options:
-      - [
-          "4.4.0", "rstudio/2022.07.2 R/4.4.0",
-        ]
-      - [
-          "4.3.0", "rstudio/2022.07.2 R/4.3.0",
-        ]
-      - [
-          "4.2.1", "rstudio/2022.07.2 R/4.2.1",
-        ]
-      - [
-          "4.1.0", "app_rstudio_server/4.1.0",
-          data-option-for-cluster-ascend: false
-        ]
-      - [
-          "4.0.2", "app_rstudio_server/4.0.2",
-          data-option-for-cluster-ascend: false,
-        ]
-      - [
-          "3.6.3", "app_rstudio_server/3.6.3",
-          data-option-for-cluster-ascend: false,
-        ]
-      - [
-          "3.6.1", "gnu/9.1.0 mkl/2019.0.3 R/3.6.1 rstudio/1.1.380_server texlive",
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-pitzer: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "3.6.0", "gnu/7.3.0 mkl/2018.0.3 R/3.6.0 rstudio/1.1.380_server texlive",
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-pitzer: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "3.6.0", "gnu/7.3.0 mkl/2018.0.3 R/3.6.0 rstudio/1.2.1335 texlive",
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "3.5.2", "intel/18.0.4 R/3.5.2 rstudio/1.1.456 texlive",
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "3.5.1", "intel/18.0.4 R/3.5.1 rstudio/1.1.456 texlive",
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-owens: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "3.5.0", "intel/18.0.3 R/3.5.0 rstudio/1.1.380_server texlive",
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-pitzer: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "3.4.2", "intel/16.0.3 R/3.4.2 rstudio/1.1.380_server texlive",
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-pitzer: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
-      - [
-          "3.3.2", "intel/16.0.3 R/3.3.2 rstudio/1.0.136_server texlive",
-          data-option-for-cluster-ascend: false,
-          data-option-for-cluster-pitzer: false,
-          data-option-for-cluster-kubernetes: false,
-          data-option-for-cluster-kubernetes-test: false,
-          data-option-for-cluster-kubernetes-dev: false
-        ]
