--- a/manifest.yml
+++ b/manifest.yml
@@ -3,11 +3,8 @@ name: RStudio Server
 category: Interactive Apps
 subcategory: Servers
 role: batch_connect
-description: |
-  This app will launch [RStudio Server] an IDE for [R] on the [Owens] or [Pitzer]
-  clusters.
-
-  [RStudio Server]: https://www.rstudio.com/products/rstudio-server/
-  [R]: https://www.r-project.org/
-  [Owens]: https://www.osc.edu/resources/technical_support/supercomputers/owens
-  [Pitzer]: https://www.osc.edu/resources/technical_support/supercomputers/pitzer
+description: "This app will launch [RStudio Server] an IDE for [R] on the [Owens]
+  or [Pitzer]\r\nclusters.\r\n\r\n[RStudio Server]: https://www.rstudio.com/products/rstudio-server/\r\n[R]:
+  https://www.r-project.org/\r\n[Owens]: https://www.osc.edu/resources/technical_support/supercomputers/owens\r\n[Pitzer]:
+  https://www.osc.edu/resources/technical_support/supercomputers/pitzer\r\n"
+icon: ''
